--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,16 @@
     <p>Version du 2023-12-11</p>
   </header>
   <main>
-    <h2>Boutons</h2>
+    <h2>mat-grid-list</h2>
+    <mat-grid-list cols="2" rowHeight="4:1">
+      <mat-grid-tile>Rectangle 1</mat-grid-tile>
+      <mat-grid-tile>Rectangle 2</mat-grid-tile>
+      <mat-grid-tile>Rectangle 3</mat-grid-tile>
+      <mat-grid-tile>Rectangle 4</mat-grid-tile>
+    </mat-grid-list>
+    <h2>mat-slide-toggle</h2>
     <fieldset>
-      <legend>Boutons à bascule</legend>
+      <legend>Legend</legend>
       <mat-slide-toggle>Option 1</mat-slide-toggle>
       <mat-slide-toggle>Option 2</mat-slide-toggle>
       <mat-slide-toggle>Option 3</mat-slide-toggle>
